--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "@reduxjs/toolkit": "^2.2.6",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-redux": "^9.1.2",
         "react-router-dom": "^6.25.1",
+        "redux-persist": "^6.0.0",
         "sass": "^1.77.8"
     },
     "devDependencies": {
